Mega-commit! * Fixed most warnings - closes #2 * Improved UI `cursor` for filter buttons and * Added explicit logout-button - closes #11 * Removed unneeded `set`-calls to firebase and return empty list when `null` - closes #1 * Added label and correct coloring to due dates in add popover - closes #10 * Renamed firebase component files to avoid potential namespace confusion with * Made an attempt to fix #18, but have not found a way to dev-test on mobile yet

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ body {
      max-width: 800px!important;
     }
   }
+
+ .filterbutton {
+    cursor: pointer;
+}
